# Oraculo-Platform

./: .gitignore  ANALISE_FINAL.md  ANALISE_PROJETO.md  ANALISE_V4.md  GEMINI.md  INFRASTRUCTURE.md  README.md  README.txt  prompt.txt
backend/: .env.example  Dockerfile  GEMINI.md  README.md  pyproject.toml  requirements.txt  uvicorn_log.txt
backend/app/: celery_instance.py  listener.py  main.py  tasks.py  worker.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  chat.py  project_analysis.py  webhook.py  workspace.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/crud/: workspace_crud.py
backend/app/schemas/: chat_schemas.py  document_schemas.py  user_schemas.py  workspace_schemas.py
backend/app/services/: llm_service.py  rag_service.py
backend/app/services/analysis/: dxf_analyzer.py  ifc_analyzer.py
frontend/: .env.local.example  GEMINI.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/components/: QueryProvider.tsx
frontend/components/auth/: LogoutButton.tsx
frontend/components/hooks/: use-toast.ts
frontend/components/layout/: WorkspaceNav.tsx
frontend/components/ui/: alert-dialog.tsx
frontend/components/workspace/: ChatInterface.tsx  FileList.tsx  FileManager.tsx  FileUploader.tsx
frontend/context/: AuthContext.tsx
frontend/hooks/: useWorkspace.ts
frontend/lib/: supabase.ts
frontend/services/: apiClient.ts
scripts/: README.md
scripts/maintenance/: clear_orphan_files.py
(+6 files in other folders)
